@@ -149,6 +149,7 @@ src/Extras/MusicBrainz/MusicBrainz.dll.config
 src/Plugins/Makefile
 src/Plugins/Banshee.Plugins.Audioscrobbler/Makefile
 src/Plugins/Banshee.Plugins.Audioscrobbler/Banshee.Plugins.Audioscrobbler.dll.config
+src/Plugins/Banshee.Plugins.Bookmarks/Makefile
 src/Plugins/Banshee.Plugins.Daap/Makefile
 src/Plugins/Banshee.Plugins.Daap/Banshee.Plugins.Daap.dll.config
 src/Plugins/Banshee.Plugins.MetadataSearch/Makefile
