@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<gconfschemafile>
+  <schemalist>
+    <schema>
+      <key>/schemas/apps/banshee/plugins/bookmarks/enabled</key>
+      <applyto>/apps/banshee/plugins/bookmarks/enabled</applyto>
+      <owner>banshee</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Plugin enabled</short>
+        <long>Bookmarks plugin enabled</long>
+      </locale>
+    </schema>
+  </schemalist>
+</gconfschemafile>
