@@ -2,6 +2,7 @@
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="CombineConfiguration">
       <Entry build="True" name="Banshee.Plugins.Audioscrobbler" configuration="Debug" />
+      <Entry build="True" name="Banshee.Plugins.Bookmarks" configuration="Debug" />
       <Entry build="True" name="Banshee.Plugins.Daap" configuration="Debug" />
       <Entry build="True" name="Banshee.Plugins.MetadataSearch" configuration="Debug" />
       <Entry build="True" name="Banshee.Plugins.MMKeys" configuration="Debug" />
@@ -12,8 +13,10 @@
       <Entry build="True" name="Banshee.Plugins.Recommendation" configuration="Debug" />
     </Configuration>
   </Configurations>
+  <DeployTargets />
   <StartMode startupentry="Banshee.Plugins.Audioscrobbler" single="True">
     <Execute type="None" entry="Banshee.Plugins.Audioscrobbler" />
+    <Execute type="None" entry="Banshee.Plugins.Bookmarks" />
     <Execute type="None" entry="Banshee.Plugins.Daap" />
     <Execute type="None" entry="Banshee.Plugins.MetadataSearch" />
     <Execute type="None" entry="Banshee.Plugins.MMKeys" />
@@ -25,6 +28,7 @@
   </StartMode>
   <Entries>
     <Entry filename="./Banshee.Plugins.Audioscrobbler/Banshee.Plugins.Audioscrobbler.mdp" />
+    <Entry filename="./Banshee.Plugins.Bookmarks/Banshee.Plugins.Bookmarks.mdp" />
     <Entry filename="./Banshee.Plugins.Daap/Banshee.Plugins.Daap.mdp" />
     <Entry filename="./Banshee.Plugins.MetadataSearch/Banshee.Plugins.MetadataSearch.mdp" />
     <Entry filename="./Banshee.Plugins.MMKeys/Banshee.Plugins.MMKeys.mdp" />
